# task_12_1

./: README.md  calc_12_1.py  pyproject.toml  run.sh
app/: config.py  main.py
app/shapes/: triangle.py
app/shapes/schemas/: __init__.py  base.py  triangle.py
tests/: triangel_test.py
