[tool.poetry]
name = "tastk-12-alice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.3"
pyqt5 = "^5.15.11"
pytest = "^8.3.4"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--maxfail=3 --disable-warnings --tb=short"
testpaths = ["tests"]
pythonpath = ["app"]
